<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class=".LoginBinding">
        <variable
            name="viewModel"
            type="com.shopping.baseproject.core.auth.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:fontFamily="@font/galada"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="35sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/emailImage"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_email"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/email_il"
                app:layout_constraintBottom_toBottomOf="@id/email_il"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_il"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/emailImage"
                app:layout_constraintTop_toBottomOf="@id/appName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/keyImage"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_key"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/password_il"
                app:layout_constraintBottom_toBottomOf="@id/password_il"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_il"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:hint="@string/prompt_password"
                android:layout_marginStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/keyImage"
                app:layout_constraintTop_toBottomOf="@id/email_il">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.isLoginEnabled}"
                android:onClick="@{() -> viewModel.onLoginClicked()}"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                app:layout_constraintBottom_toTopOf="@id/text_or"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_il"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/text_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:text="@string/or"
                app:layout_constraintBottom_toTopOf="@id/create_account_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_button"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintVertical_chainStyle="packed" />

            <Button
                android:id="@+id/create_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.openRegisterFragment()}"
                android:text="@string/create_account"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_or" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>